product-management-api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: product-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - product-api.local
    secretName: product-api-local-tls

  rules:
  - host: product-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: product-api
            port:
              number: 80
